<resources>
    <string name="app_name">Material for Reddit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="html">
        <b><font size="20">2242</font></b> pts <b>313</b> comments by <b>silverAndroid</b>
    </string>

    <string name="html2">
        <b>8 hours</b> ago to r/<b>todayilearned</b>
    </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="menu_refresh">Refresh</string>
    <string name="nsfw">NSFW</string>

    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="dummy_comment">
        <div class="md"><p><b><em>""Damn it Peralta, it\'s a tip, not a life hack.""</em></b></p></div>
    </string>
    <string name="permission_title">Request for Permission</string>
    <string name="permission_message">Material for Reddit would like to:\n\u2022 Submit and change my votes on
        comments and submissions.\n\u2022 Access the list of subreddits you moderate, contribute to, and subscribe
        to.\n\u2022 Maintain this access indefinitely (or until manually revoked).\n\nIt will not be able to access
        your password.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_you_tube">YouTubeActivity</string>
    <string name="dummy_self_text">The app puts the big colorful images right in the middle of your timeline and you can keep on scrolling without reaching the end.</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="url_hint">URL</string>
    <string name="error_invalid_url">Invalid URL</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_reddit">Search Reddit</string>
    <string name="subreddit_prompt">Subreddit</string>
    <string name="author_prompt">Author</string>
    <string name="site_prompt">Site</string>
    <string name="url_prompt">URL</string>
    <string name="selftext_prompt">Self Text</string>
    <string name="search_subreddit_info">The submission\'s subreddit.</string>
    <string name="search_author_info">The user who submitted the post.</string>
    <string name="search_site_info">The domain of the submitted URL</string>
    <string name="search_url_info">The submission\'s URL (the website address)</string>
    <string name="search_selftext_info">The body HTML of the post.</string>
    <string name="flair_prompt">Flair</string>
    <string name="search_flair_info">The text on the link flair of the post.</string>
    <string name="nsfw_prompt">NSFW</string>
    <string name="self_prompt">Self Post</string>
    <string name="filters_subheading">FILTERS (OPTIONAL)</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_image_gallery">ImageGalleryActivity</string>
    <string name="sort">Sort…</string>
    <string name="sort_links_time">Links from:</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="sort_rising">Rising</string>
    <string name="sort_controversial_hour">Controversial - Past Hour</string>
    <string name="sort_controversial_24_hours">Controversial - Past 24 Hours</string>
    <string name="sort_controversial_week">Controversial - Past Week</string>
    <string name="sort_controversial_month">Controversial - Past Month</string>
    <string name="sort_controversial_year">Controversial - Past Year</string>
    <string name="sort_controversial_all_time">Controversial - All Time</string>
    <string name="sort_top_hour">Top - Past Hour</string>
    <string name="sort_top_24_hours">Top - Past 24 Hours</string>
    <string name="sort_top_week">Top - Past Week</string>
    <string name="sort_top_month">Top - Past Month</string>
    <string name="sort_top_year">Top - Past Year</string>
    <string name="sort_top_all_time">Top - All Time</string>
    <string name="gilded">Gilded</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <string name="title_hint">Title</string>
    <string name="text_hint">Text</string>
    <string name="select_image">Select image…</string>
    <string name="text">Text</string>
    <string name="url">URL</string>
    <string name="image">Image</string>
    <string name="no_image_select">No image selected…</string>
    <string name="load_image_error">Error loading image…</string>
    <string name="continue_thread">Continue comment thread…</string>
</resources>
