<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radio_group_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/hot_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_hot"/>

        <RadioButton
            android:id="@+id/new_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_new"/>

        <RadioButton
            android:id="@+id/rising_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_rising"/>

        <RadioButton
            android:id="@+id/controversial_hour_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_controversial_hour"/>

        <RadioButton
            android:id="@+id/controversial_24_hours_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_controversial_24_hours"/>

        <RadioButton
            android:id="@+id/controversial_week_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_controversial_week"/>

        <RadioButton
            android:id="@+id/controversial_month_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_controversial_month"/>

        <RadioButton
            android:id="@+id/controversial_year_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_controversial_year"/>

        <RadioButton
            android:id="@+id/necontroversial_all_time_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_controversial_all_time"/>

        <RadioButton
            android:id="@+id/top_hour_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_top_hour"/>

        <RadioButton
            android:id="@+id/top_24_hours_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_top_24_hours"/>

        <RadioButton
            android:id="@+id/top_week_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_top_week"/>

        <RadioButton
            android:id="@+id/top_month_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_top_month"/>

        <RadioButton
            android:id="@+id/top_year_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_top_year"/>

        <RadioButton
            android:id="@+id/top_all_time_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_top_all_time"/>

        <RadioButton
            android:id="@+id/gilded_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gilded"/>
    </RadioGroup>
</ScrollView>